option java_package = "com.appdynamics.agent.api";

option java_outer_classname = "AgentAPI";

message TestMessage {
    optional int32 testField = 1;
}

message TestErrorMessage {
    optional string errorMessage = 1;
    optional string errorDetails = 2;
}

message MachineSnapshotDataList {
    repeated MachineSnapshotData machineSnapshotDataList = 1;
}

message MachineSnapshotData {
    optional MachineSnapshotDataSummary machineSnapshotDataSummary = 1;
    optional MachineSnapshotContents machineSnapshotContents = 2;
}

message MachineSnapshotContents {
    optional DotNetMachineSnapshotState dotNetMachineSnapshotState = 1;
    optional bool isCompressed = 2;
    optional int32 originalLength = 3;
    optional bytes compressedData = 4;
}

message DotNetMachineSnapshotState {
    repeated DotNetProcessInformation processInfo = 1;
    repeated DotNetAppPoolInformation poolInfo = 2;
}

message DotNetProcessInformation {
    optional uint32 processId = 1;
    optional string processName = 2;
    optional string description = 3;
    optional uint64 cpuUsage = 4;
    optional uint64 memoryUsage = 5;
}

message MachineSnapshotDataSummary {
    optional int64 localStartTime = 1;
    optional int64 machineId = 2;
    optional int32 cpuUsage = 3;
    optional int32 memoryUsage = 4;
    optional MachineSnapshotType snapshotType = 5 [default = PERIODIC];
    optional MachineSnapshotPolicyEventType policyEventType = 6 [default = CPU];
    optional int64 id = 7;
    optional int64 controllerTime = 8;
    optional bool archived = 9;
}

enum MachineSnapshotPolicyEventType {
    CPU = 0;
    RAM = 1;
    IIS = 2;
}

enum MachineSnapshotType {
    PERIODIC = 0;
    POLICY_TRIGGERED = 1;
}

message DotNetAppPoolInformation {
    optional string name = 1;
    optional uint64 requestsPerSec = 2;
    optional uint64 arrivalRate = 3;
    optional uint64 maxQueueItemAge = 4;
    repeated DotNetAppPoolRequest executingRequests = 5;
}

message DotNetAppPoolRequest {
    optional string url = 1;
    optional string verb = 2;
    optional int32 timeElapsed = 3;
}
